# Virtware

./: .doxygen.txt  CMakeLists.txt  README.md  TODO.md
gui/: CMakeLists.txt
gui/properties/: startup.cpp  target_properties.cmake
gui/src/: main_form.cpp  main_form.hpp  new_routine_form.cpp  new_routine_form.hpp
include/: pch.hpp
include/core/: core.hpp
include/events/: event.hpp
include/events/key/: key_click.hpp  key_press.hpp  key_release.hpp
include/events/mouse/: mouse_button.hpp  mouse_move.hpp  mouse_press.hpp
include/events/time/: wait.hpp
include/executor/: executor.hpp
include/gui/: main_form.hpp
include/io/key/: key.hpp
include/io/mouse/: mouse.hpp
include/recorder/: recorder.hpp
include/routine/: routine.hpp
include/timer/: timer.hpp
include/types/: vec.hpp
include/utils/: convert_utils.hpp
properties/: assembly_info.cpp  startup.cpp  target_properties.cmake
recordings/: open_paint.vtw  search_google.vtw
src/events/: event.cpp
src/events/key/: key_click.cpp  key_press.cpp  key_release.cpp
src/events/mouse/: mouse_move.cpp  mouse_scroll.cpp
src/events/time/: wait.cpp
src/executor/: executor.cpp
src/gui/: main_form.cpp
src/io/key/: key.cpp
src/io/mouse/: mouse.cpp
src/recorder/: recorder.cpp
src/routine/: routine.cpp
tests/: CMakeLists.txt
tests/properties/: assembly_info.cpp  target_properties.cmake
virtware/: CMakeLists.txt
virtware/include/: export.hpp
virtware/include/events/: event.hpp
virtware/include/events/mouse/: mouse_move.hpp
virtware/include/executor/: executor.hpp
virtware/include/routine/: routine.hpp
virtware/properties/: startup.cpp  target_properties.cmake
virtware/src/: form1.cpp  form1.h
virtware/src/events/: event.cpp
virtware/src/events/mouse/: mouse_move.cpp
virtware/src/executor/: executor.cpp
virtware/src/routine/: routine.cpp
virtware/test/: CMakeLists.txt
virtware/test/properties/: startup.cpp  target_properties.cmake
virtware/test/src/: mouse_events_tests.cpp
virtware_script/: CMakeLists.txt
virtware_script/properties/: startup.cpp  target_properties.cmake
virtware_script/src/: program.cpp  program.h
